--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-PORT=3000
-SECRET=dhw981948fh91dj981u84u2198fj9218jd8921jd
-DB="host=localhost user=postgres password=Batassuci123 dbname=bioskop_golang port=5432"
+JWT_SECRET=dhw981948fh91dj981u84u2198fj9218jd8921jd
+DB="host=localhost user=postgres password=postgres dbname=golang-rest-api port=5432"
+PORT=6789
